<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_friend">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvFriend_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        </android.support.v7.widget.RecyclerView>


    </LinearLayout>

    <Button
        android:id="@+id/btn_editTeman"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editBtn"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tutup"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="2dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/edit_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textSize="16sp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" />

            <EditText
                android:id="@+id/edit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tambah"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"
                android:textSize="15sp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>