<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_colorPrimary">

    <View
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@drawable/bg_gradien_home" />

        <LinearLayout
            android:id="@+id/home_main_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="1dp"
                    android:src="@drawable/img_profile" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="85dp"
                        app:cardCornerRadius="10dp"
                        app:contentPaddingBottom="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingTop="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="60dp"
                                android:text="@string/nama"
                                android:textSize="25sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="8dp"
                                android:text="@string/status"
                                android:textSize="18sp"
                                android:gravity="center"/>

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:text="@string/tentang"
                                android:textSize="15sp" />


                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        app:cardCornerRadius="10dp"
                        app:contentPaddingBottom="15dp"
                        app:contentPaddingLeft="15dp"
                        app:contentPaddingRight="15dp"
                        app:contentPaddingTop="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/interst"
                                android:textSize="18sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="15dp"
                                android:layout_marginEnd="5dp"
                                android:layout_marginBottom="5dp"
                                android:orientation="horizontal">

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:src="@drawable/ic_game" />

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_marginStart="55dp"
                                    android:src="@drawable/ic_science"
                                    android:layout_marginLeft="55dp" />

                                <ImageView
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    android:layout_marginStart="45dp"
                                    android:src="@drawable/ic_anime"
                                    android:layout_marginLeft="45dp" />


                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="horizontal"
                                android:layout_marginTop="5dp"
                                android:layout_marginStart="5dp"
                                android:layout_marginEnd="5dp"
                                >

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/game"
                                    android:layout_marginStart="8dp"
                                    android:layout_marginLeft="8dp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/science"
                                    android:layout_marginStart="67dp"
                                    android:layout_marginLeft="67dp" />
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/anime"
                                    android:layout_marginStart="52dp"
                                    android:layout_marginLeft="52dp" />


                            </LinearLayout>


                        </LinearLayout>


                    </android.support.v7.widget.CardView>


                </LinearLayout>


            </RelativeLayout>


        </LinearLayout>




</RelativeLayout>