<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="800dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/img_foto" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bg_profile" />

        <TextView
            android:id="@+id/nama"
            android:layout_marginTop="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/nama"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/sosmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nama"
            android:layout_margin="15dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/card_facebook"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_facebook" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_instagram"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="45dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="45dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_instagram" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_git"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="45dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="45dp">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_github" />


            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_below="@+id/sosmed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_marginStart="25dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_phone_receiver"
                    android:layout_marginLeft="25dp" />
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="80dp"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:background="@android:color/black"
                    android:layout_marginLeft="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="120dp"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:layout_marginLeft="120dp" />



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@android:color/white"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:layout_marginStart="25dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_envelope"
                    android:layout_marginLeft="25dp" />
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="80dp"
                    android:layout_width="1dp"
                    android:layout_height="35dp"
                    android:background="@android:color/black"
                    android:layout_marginLeft="80dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="120dp"
                    android:textColor="@android:color/black"
                    android:textSize="13sp"
                    android:layout_marginLeft="120dp" />



            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <android.support.v7.widget.CardView
                    android:id="@+id/card_about"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="25dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@android:color/white"
                    app:cardCornerRadius="10dp"
                    android:layout_marginLeft="25dp">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_question_sign" />


                </android.support.v7.widget.CardView>





            </LinearLayout>



        </LinearLayout>


    </RelativeLayout>


</RelativeLayout>